miniextendr-macros/tests/ui/derive_dataframe_field_expand_vec_no_width.stderr
error: `expand`/`unnest` is only valid on `[T; N]` or `Vec<T>` fields
 --> tests/ui/derive_dataframe_field_expand_vec_no_width.rs:8:12
  |
8 |     score: f64,
  |            ^^^
