miniextendr-macros/tests/ui/derive_dataframe_field_expand_vec_no_width.rs
//! Test: unnest on scalar field is rejected.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Foo {
    #[dataframe(unnest)]
    score: f64,
}

fn main() {}
